--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         
     -->
     <div id="bored" class="step slide" data-x="-1000" data-y="-1500" data-autoplay="10">
-        <q>Aren’t you just <b>bored</b> with all those slides-based presentations?</q>
+        <q>Hello World! <b>Let's</b> start a new project?</q>
     </div>
 
     <!--
