--- a/signin.html
+++ b/signin.html
@@ -62,14 +62,22 @@
 					<div class="peers ai-c jc-sb fxw-nw">
 						<div class="peer">
 							<div class="checkbox checkbox-circle checkbox-info peers ai-c">
-								<input type="checkbox" id="inputCall1" name="inputCheckboxesCall" class="peer"> 
 								<label for="inputCall1" class="peers peer-greed js-sb ai-c">
-									<span class="peer peer-greed">Remember Me</span>
+									<span class="peer peer-greed"></span>
 								</label>
 							</div>
 						</div>
 						<div class="peer">
 							<button onclick="login()" class="btn btn-primary">Login</button>
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="peers ai-c jc-sb fxw-nw">
+						<div class="peer">
+							<label for="inputCall1" class="peers peer-greed js-sb ai-c">
+								<span class="peer peer-greed">New user? <a href="signup.html">Create an Account</a></span>
+							</label>
 						</div>
 					</div>
 				</div>
