--- a/signup.html
+++ b/signup.html
@@ -76,6 +76,9 @@
   				<div class="form-group">
   					<button onclick="signup()" class="btn btn-primary">Register</button>
   				</div>
+          <div class="form-group">
+            <span class="peer peer-greed">Already have an account? <a href="signin.html">Login</a></span>
+          </div>
   			</form>
   		</div>
   	</div>
